etapa7-8/manifests/app-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels:
    app: simpleapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: simpleapp 
  template:
    metadata:
      labels:
        app: simpleapp
    spec:
      containers:
      - name: simpleapp-container
        image: carlosquintanilha/simpleappredis:v0.2
        ports:
        - containerPort: 8000
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
