etapa7-8/manifests/pod-pvc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: shell-pod-pvc
spec:
  volumes:
    - name: "persistent-storage"
      persistentVolumeClaim:
        claimName: test-pvc
  containers:
    - name: ubuntu-ctnr
      image: ubuntu
      ports:
      - containerPort: 80
      command: ['sleep', '3600']
      volumeMounts:
        - name: persistent-storage
          mountPath: "/data"
