etapa7-8/manifests/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: shell-pod
spec:
  containers:
  - name: ubuntu-ctnr
    image: ubuntu
    ports:
    - containerPort: 80
    command: ['sleep', '3600']
