etapa7-8/manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  selector:
    app: simpleapp
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: NodePort
