etapa7-8/manifests/ingress_v1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: simpleapp.example
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app
                port:
                  number: 8000

          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: web2
                port:
                  number: 8000
